tests/broken/for-unclosed.stderr
error: "for" statement is never closed (unexpected end of template)
 --> tests/broken/for-unclosed.rs:4:85
  |
4 | #[oxiplate_inline = "{%- for number in numbers -%}{{ number }} + 1 = {{ number + 1 }}"]
  |                                                                                     ^
